--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,6 +14,7 @@
 {{ if ne .Lastmod .Date }}{{ partial "dates.html" . }}{{ end -}}
 </div>
 </article>
+{{ partial "share-buttons.html" . }}
 <hr/>
 <script src="https://utteranc.es/client.js"
         repo="emacstalk/emacstalk.github.io"
