--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -11,6 +11,7 @@
 {{ .Content }}
 </div>
 </article>
+{{ partial "share-buttons.html" . }}
 <hr/>
 <script src="https://utteranc.es/client.js"
         repo="emacstalk/emacstalk.github.io"
