add qqmusic, netease music link

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -11,19 +11,25 @@
         <a target="_blank" href="/podcast/index.xml" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -653px; height: 40px; width: 121px;">RSS Feed</a>
       </ol>
       <ol>
+        <a target="_blank" href="https://y.qq.com/n/ryqq/albumDetail/000BkGbT1J1Mo2" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/qqmusic160x40.jpg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">QQ 音乐</a>
+      </ol>
+      <ol>
+        <a target="_blank" href="https://music.163.com/#/djradio?id=963834541" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/netease160x40.jpg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">网易云音乐</a>
+      </ol>
+      <ol>
         <a target="_blank" href="https://www.ximalaya.com/keji/50656645/" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/ximalaya160x40.png); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">喜马拉雅</a>
       </ol>
       <ol>
         <a target="_blank" href="https://podcasts.apple.com/podcast/emacstalk/id1574036730" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px 7px; height: 40px; width: 165px;">Apple Podcasts</a>
       </ol>
       <ol>
+        <a target="_blank" href="https://pca.st/hbvw3oxs" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -473px; height: 40px; width: 150px;">Listen on Pocket Casts</a>
+      </ol>
+      <ol>
         <a target="_blank" href="https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -53px; height: 40px; width: 120px;">Listen on Spotify</a>
       </ol>
       <ol>
         <a target="_blank" href="https://castbox.fm/channel/EmacsTalk-id4367580" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -353px; height: 40px; width: 120px;">Listen on Castbox</a>
-      </ol>
-      <ol>
-        <a target="_blank" href="https://pca.st/hbvw3oxs" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -473px; height: 40px; width: 150px;">Listen on Pocket Casts</a>
       </ol>
     </ul>
   </section>
