--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -8,7 +8,13 @@
     <h4 class="menu">收听方式</h4>
     <ul class="menu">
       <ol>
-        <a target="_blank" href="/podcast/index.xml" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -653px; height: 40px; width: 121px;">RSS Feed</a>
+        <a target="_blank" href="/podcast/index.xml" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -653px; height: 40px; width: 160px;">RSS Feed</a>
+      </ol>
+      <ol>
+        <a target="_blank" href="/images/weixin.jpg" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/gongzhonghao133x35.jpg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">微信公众号</a>
+      </ol>
+      <ol>
+        <a target="_blank" href="https://www.xiaoyuzhoufm.com/podcast/60eabfdd030f8753b9982047" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/xiaoyuzhou.jpg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">小宇宙</a>
       </ol>
       <ol>
         <a target="_blank" href="https://y.qq.com/n/ryqq/albumDetail/000BkGbT1J1Mo2" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/qqmusic160x40.jpg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">QQ 音乐</a>
@@ -20,16 +26,16 @@
         <a target="_blank" href="https://www.ximalaya.com/keji/50656645/" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/ximalaya160x40.png); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">喜马拉雅</a>
       </ol>
       <ol>
-        <a target="_blank" href="https://podcasts.apple.com/podcast/emacstalk/id1574036730" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px 7px; height: 40px; width: 165px;">Apple Podcasts</a>
+        <a target="_blank" href="https://podcasts.apple.com/podcast/emacstalk/id1574036730" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px 7px; height: 40px; width: 160px;">Apple Podcasts</a>
       </ol>
       <ol>
-        <a target="_blank" href="https://pca.st/hbvw3oxs" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -473px; height: 40px; width: 150px;">Listen on Pocket Casts</a>
+        <a target="_blank" href="https://pca.st/hbvw3oxs" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -473px; height: 40px; width: 160px;">Listen on Pocket Casts</a>
       </ol>
       <ol>
-        <a target="_blank" href="https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -53px; height: 40px; width: 120px;">Listen on Spotify</a>
+        <a target="_blank" href="https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -53px; height: 40px; width: 160px;">Listen on Spotify</a>
       </ol>
       <ol>
-        <a target="_blank" href="https://castbox.fm/channel/EmacsTalk-id4367580" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -353px; height: 40px; width: 120px;">Listen on Castbox</a>
+        <a target="_blank" href="https://castbox.fm/channel/EmacsTalk-id4367580" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -353px; height: 40px; width: 160px;">Listen on Castbox</a>
       </ol>
     </ul>
   </section>
