--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -10,6 +10,18 @@
 <div class="content">
 {{ .Content }}
 </div>
+<h2>联系我们</h2>
+<ul>
+<li>QQ 听友群：<a href="https://jq.qq.com/?_wv=1027&amp;k=9tAXJ8gG">530146104</a></li>
+<li>TG 听友群：<a href="https://t.me/emacstalk">https://t.me/emacstalk</a></li>
+<li>邮件：<a href="mailto:emacstalk@liujiacai.net">emacstalk@liujiacai.net</a></li>
+<li>网站留言：<a href="https://emacstalk.github.io/">https://emacstalk.github.io/</a></li>
+</ul>
+<h2>为爱发电</h2>
+<p>
+如果您喜欢我们的节目，欢迎通过<a href="https://afdian.net/@emacstalk">「爱发电」</a>来支持。
+</p>
+
 </article>
 {{ partial "share-buttons.html" . }}
 <hr/>
