--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,9 +2,7 @@
 {{ $currentID := "" -}}
 {{ with .File }}{{ $currentID = .UniqueID }}{{ end -}}
 <aside class="sidebar layout__second-sidebar">
-  {{ range .Site.Sections -}}
   <section>
-
     <h4 class="menu">收听方式</h4>
     <ul class="menu">
       <ol>
@@ -37,6 +35,15 @@
       <ol>
         <a target="_blank" href="https://castbox.fm/channel/EmacsTalk-id4367580" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -353px; height: 40px; width: 160px;">Listen on Castbox</a>
       </ol>
+    </ul>
+  </section>
+  {{ range .Site.Sections -}}
+  <section>
+    <h4 class="menu"><a href="{{ .RelPermalink }}"{{ if eq $currentSection .Section }} class="active" aria-current="page"{{ end }}>{{ .Title }}</a></h4>
+    <ul class="menu">
+      {{ range .Pages -}}
+      <li><a href="{{ .RelPermalink }}"{{ if eq $currentID .File.UniqueID }} class="active" aria-current="page"{{ end }}>{{ .Title }}</a></li>
+      {{ end -}}
     </ul>
   </section>
   {{ end -}}
