--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -15,6 +15,9 @@
         <a target="_blank" href="https://www.xiaoyuzhoufm.com/podcast/60eabfdd030f8753b9982047" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/xiaoyuzhou.jpg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">小宇宙</a>
       </ol>
       <ol>
+        <a target="_blank" href="https://h5.qishuier.com/podcasts/195916240953294849" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/qishuier160x48.jpg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">汽水儿</a>
+      </ol>
+      <ol>
         <a target="_blank" href="https://y.qq.com/n/ryqq/albumDetail/000BkGbT1J1Mo2" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/qqmusic160x40.jpg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; height: 40px; width: 160px;">QQ 音乐</a>
       </ol>
       <ol>
