--- a/layouts/partials/podcast.html
+++ b/layouts/partials/podcast.html
@@ -4,9 +4,14 @@
 {{ end -}}
 <figure class="podcast">
 <audio controls preload="{{ .Site.Params.Podcast.preload | default "metadata" }}"><source src="{{ $src }}" type="audio/mpeg"></audio>
-<figcaption><a href="{{ $src }}">{{ .Title }}</a></figcaption>
 </figure>
 {{if .Params.podcast_image_src -}}
   {{ $resource := resources.Get .Params.podcast_image_src}}
 <figure class="image {{ .Params.podcast_image_class | default "right" }}"><img src="{{ $resource.RelPermalink }}" width="{{ .Params.podcast_image_width | default "250" }}" alt="{{ .Params.podcast_image_alt }}" title="{{ .Params.podcast_image_alt }}"></figure>
 {{ end -}}
+<style>
+  article a {
+      text-decoration-style: wavy;
+      text-decoration-color: blue;
+  }
+</style>
