add image for tip 003

--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -20,5 +20,16 @@
         crossorigin="anonymous"
         async>
 </script>
+<style>
+  article a {
+      text-decoration-style: wavy;
+      text-decoration-color: blue;
+  }
+  figure figcaption {
+    text-align: center;
+    font-style: italic;
+    color: grey;
+  }
+</style>
 </main>
 {{ end }}
