--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -38,6 +38,9 @@
       <ol>
         <a target="_blank" href="https://castbox.fm/channel/EmacsTalk-id4367580" style="display: inline-block; background-color: #FFFFFF; background-image: url(/images/listen-on-embed.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px; background-position: -230px -353px; height: 40px; width: 160px;">Listen on Castbox</a>
       </ol>
+      <ol>
+        <a target="_blank" href="https://podcasts.google.com/feed/aHR0cHM6Ly9lbWFjc3RhbGsuZ2l0aHViLmlvL3BvZGNhc3QvaW5kZXgueG1s" style="display: inline-block; background-color: #FFFFFF; background-image: url(https://www.gstatic.com/podcasts_console/promote/English_EN/EN_Google_Podcasts_Badge.svg); background-repeat: no-repeat; border: 1px solid #000000; border-radius: 5px; margin: 0 5px 5px 0; text-indent: -9000px;  height: 40px; width: 160px;">Listen on Google</a>
+      </ol>
     </ul>
   </section>
   {{ range .Site.Sections -}}
