--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -8,6 +8,7 @@
 </header>
 {{ partial "podcast.html" . -}}
 <div class="content">
+{{ partial "fadian.html" . }}
 {{ .Content }}
 </div>
 </article>
