--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,8 +27,8 @@
 </script>
 <style>
   article a {
-      text-decoration-style: wavy;
       text-decoration-color: blue;
+      text-decoration-thickness: 2px;
   }
   figure figcaption {
     text-align: center;
