--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -23,8 +23,9 @@
 </script>
 <style>
   article a {
-      text-decoration-style: wavy;
+      /* text-decoration-style: wavy; */
       text-decoration-color: blue;
+      text-decoration-thickness: 2px;
   }
   figure figcaption {
     text-align: center;
