--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -53,9 +53,10 @@
   <section>
     <h4 class="menu"><a href="{{ .RelPermalink }}"{{ if eq $currentSection .Section }} class="active" aria-current="page"{{ end }}>{{ .Title }}</a></h4>
     <ul class="menu">
-      {{ range .Pages -}}
+      {{ range first 3 .Pages -}}
       <li><a href="{{ .RelPermalink }}"{{ if eq $currentID .File.UniqueID }} class="active" aria-current="page"{{ end }}>{{ .Title }}</a></li>
       {{ end -}}
+      <li><a href="{{ .RelPermalink }}">...</a></li>
     </ul>
   </section>
   {{ end -}}
