align th,td to left

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,6 +29,10 @@
       text-decoration-color: blue;
       text-decoration-thickness: 2px;
   }
+  th, td {
+      border: 1px groove black;
+      text-align: left;
+  }
   figure figcaption {
     text-align: center;
     font-style: italic;
