--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -10,6 +10,12 @@
 <div class="content">
 {{ partial "fadian.html" . }}
 {{ .Content }}
+
+<hr/>
+<p>
+发现错误或链接失效？
+<a href="{{ .Site.Params.git_repo}}/blob/master/content/{{ .File.Path }}">欢迎提 PR</a>！也欢迎<a href="mailto:{{ .Site.Author.email }}">写信️</a>交流。
+</p>
 </div>
 </article>
 {{ partial "share-buttons.html" . }}
