--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,10 +10,15 @@
 
 {{ .Content }}
 
-<hr/>
-<p>
-发现错误或链接失效？
-<a href="{{ .Site.Params.git_repo}}/blob/master/content/{{ .File.Path }}">欢迎提 PR</a>！也欢迎<a href="mailto:{{ .Site.Author.email }}">写信️</a>交流。
+<h2>
+  反馈
+</h2>
+<ul>
+  <li>
+    发现内容错误或链接失效？欢迎<a href="{{ .Site.Params.git_repo}}/blob/master/content/{{ .File.Path }}">提交 PR</a>
+  </li>
+  <li>对节目有想法或建议？欢迎<a href="mailto:{{ .Site.Author.email }}">来信交流️</a></li>
+</ul>
 
 {{ if $.Param "relatedposts" | default false }}{{ partial "related.html" . }}{{ end -}}
 
