--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,14 +26,7 @@
 </div>
 </article>
 {{ partial "share-buttons.html" . }}
-<hr/>
-<script src="https://utteranc.es/client.js"
-        repo="emacstalk/emacstalk.github.io"
-        issue-term="pathname"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
-</script>
+{{ partial "comments.html" . }}
 <style>
   article a {
       text-decoration-color: blue;
