--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -24,14 +24,7 @@
 </div>
 </article>
 {{ partial "share-buttons.html" . }}
-<hr/>
-<script src="https://utteranc.es/client.js"
-        repo="emacstalk/emacstalk.github.io"
-        issue-term="pathname"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
-</script>
+{{ partial "comments.html" . }}
 <style>
   article a {
       /* text-decoration-style: wavy; */
